# django-sql-middleware-package-demo-project

./: LICENSE  README.md  django_roadmap.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
roadmaps/: django_roadmap.md  middleware_roadmap.md
test/: settings.py
