[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sql-middleware"
version = "1.0.2"
description = "A Django-SQL middleware package to print out queries to the terminal"
license = { text = "MIT" }
authors = [
    { name = "Eray Sahin" },
]

dependencies = [
  "Pygments>=2.14.0","sqlparse>=0.4.3",
]

requires-python = ">=3.8"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
include = ["django-sql-middleware"]

[project.urls]
Homepage = "https://github.com/NuriEraySahin"

